--- a/ScoreBoard-gray.html
+++ b/ScoreBoard-gray.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<link rel="stylesheet" href="css/ScoreBoard-default.css" type="text/css" charset="utf-8">
+	<link rel="stylesheet" href="css/ScoreBoard-gray.css" type="text/css" charset="utf-8">
 	<script src="js/jquery-2.2.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/jstween-1.2.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/countries.js" type="text/javascript" charset="utf-8"></script>
