--- a/ScoreBoard-invert.html
+++ b/ScoreBoard-invert.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-	<link rel="stylesheet" href="css/stylesheetv2.css" type="text/css" charset="utf-8">
-	<script src="js/jquery-2.0.2.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/jstween-1.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" href="css/ScoreBoard-invert.css" type="text/css" charset="utf-8">
+	<script src="js/jquery-2.2.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/jstween-1.2.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/countries.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
 			
@@ -44,8 +44,8 @@
 				$('#mText4').html('');
 				$('#board').tween({
 				   top:{
-					  start: '-100',
-					  stop: '0',
+					  start: '1080',
+					  stop: '980',
 					  units: 'px',
 					  time: 0,
 					  duration: 0.8,
