--- a/Commentator.html
+++ b/Commentator.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-	<link rel="stylesheet" href="css/stylesheet_commentary.css" type="text/css" charset="utf-8">
-	<script src="js/jquery-2.0.2.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/jstween-1.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" href="css/commentator.css" type="text/css" charset="utf-8">
+	<script src="js/jquery-2.2.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/jstween-1.2.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/countries.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
 			
@@ -30,7 +30,7 @@
 				$('#cTitle2').html('');
 				$('#board').tween({
 				   top:{
-					  start: '-500',
+					  start: '1080',
 					  stop: '900',
 					  units: 'px',
 					  time: 0,
