--- a/Slide_right.html
+++ b/Slide_right.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-	<link rel="stylesheet" href="css/stylesheet_slide_right.css" type="text/css" charset="utf-8">
-	<script src="js/jquery-2.0.2.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/jstween-1.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" href="css/slide_right.css" type="text/css" charset="utf-8">
+	<script src="js/jquery-2.2.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/jstween-1.2.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/countries.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
 			
